[gd_scene load_steps=4 format=3 uid="uid://bhamyqskmhmif"]

[ext_resource type="Script" path="res://menus/start_screen.gd" id="1_eh4rk"]
[ext_resource type="FontFile" uid="uid://bgquwbyit1vjq" path="res://Styles/fonts/Fontspring-DEMO-riffic-ultrabold.ttf" id="2_v4adb"]


[sub_resource type="Theme" id="Theme_8unos"]
default_font = ExtResource("2_v4adb")

[node name="StartScreen" type="CanvasLayer"]
script = ExtResource("1_eh4rk")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 8
color = Color(0.721569, 0.960784, 0.733333, 1)

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_8unos")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50
alignment = 1

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.792157, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 4
theme_override_font_sizes/font_size = 84
text = "SNAKE 
GAME"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "High Score: 0"
horizontal_alignment = 1

[node name="GridContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="StartButton" type="Button" parent="Panel/VBoxContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.772549, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Start"

[node name="QuitButton" type="Button" parent="Panel/VBoxContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Quit"

[connection signal="pressed" from="Panel/VBoxContainer/GridContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/GridContainer/QuitButton" to="." method="_on_quit_button_pressed"]
